--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 /* Estilos del header */
 /* Estilos del header */
 header {
-    background: linear-gradient(to right, #009246, #fff, #ce2b37); /* Gradiente con colores de la bandera italiana */
+    background: linear-gradient(to right, #009247bb, #fff, #ce2b36cf); /* Gradiente con colores de la bandera italiana */
     padding: 20px;
     text-align: center;
     font-style: oblique;
