--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,8 @@
 /* Container for the framed look */
 .container {
     border: 2px solid #971e26; /* Marco negro de 10px */
-    padding: 20px; /* Espacio interno para que el contenido no toque el marco */
-    margin: 20px auto; /* Espacio exterior para centrar y separar el contenido del borde de la ventana */
+    padding: 15px; /* Espacio interno para que el contenido no toque el marco */
+    margin: 0; /* Espacio exterior para centrar y separar el contenido del borde de la ventana */
     max-width: 1200px; /* Ancho máximo del contenido */
     background-color: #ddd8a0; /* Fondo blanco dentro del marco */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Sombra alrededor del marco */
@@ -59,7 +59,7 @@ h2 {
     text-decoration: none;
     font-family: serif;
     font-style: oblique;
-    transition: background-color 0.3s ease; color 0.3s ease /* Transición */
+    transition: background-color 0.3s ease, color 0.3s ease; /* Transición */
     box-sizing: border-box;
 }
 
@@ -164,7 +164,7 @@ body {
 
 #basket-section {
     margin-top: 40px;
-    background-color: #ebebebc3;
+    background-color: #e1e0dcc3;
     padding: 20px;
     border: 1px solid #ddd;
     border-radius: 10px;
