--- a/styles.css
+++ b/styles.css
@@ -19,11 +19,12 @@ body {
 
 /* Header */
 header {
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.703);
     background: linear-gradient(to right, #009247bb, #fff, #ce2b36cf);
     padding: 20px;
     text-align: center;
     font-style: oblique;
-    font-size: large;
+    font-size:larger;
     font-family: serif;
     margin-bottom: 20px;
 }
@@ -56,6 +57,7 @@ h2 {
     width: 200px;
     text-align: center;
     overflow: hidden;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .main-menu ul li a {
@@ -82,6 +84,7 @@ h2 {
     padding: 20px;
     border: 1px solid #ddd;
     border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .menu-section h2 {
@@ -163,6 +166,7 @@ h2 {
     padding: 20px;
     border: 1px solid #ddd;
     border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 #basket-section h2 {
