--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
 .container {
     border: 2px solid #971e26;
     padding: 15px;
-    margin: auto;
+    margin: -15px;
     max-width: 1200px;
     background-color: #ddd8a0;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
